--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "interactive"
   ],
   "main": "dist/index.js",
-  "repository": "http://github.com/princjef/jish",
+  "repository": "http://github.com/princjef/noshell",
   "author": "Jeff Principe <princjef@gmail.com>",
   "license": "MIT",
   "types": "dist/index.d.ts",
@@ -17,12 +17,14 @@
     "prebuild": "npm run lint",
     "build": "tsc",
     "watch": "tsc -w",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@types/chalk": "^0.4.31",
     "@types/inquirer": "^0.0.34",
     "@types/strip-ansi": "^3.0.0",
+    "standard-version": "^4.0.0",
     "tslint": "^5.2.0",
     "tslint-config-standard": "^5.0.2",
     "typescript": "^2.3.2",
