--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@types/chalk": "^0.4.31",
     "@types/inquirer": "^0.0.34",
-    "@types/strip-ansi": "^3.0.0",
+    "@types/lodash": "^4.14.65",
     "standard-version": "^4.0.0",
     "tslint": "^5.2.0",
     "tslint-config-standard": "^5.0.2",
@@ -33,7 +33,9 @@
   "dependencies": {
     "@types/node": "^7.0.21",
     "chalk": "^1.1.3",
+    "cli-width": "^2.1.0",
     "inquirer": "^3.0.6",
-    "strip-ansi": "^3.0.1"
+    "lodash": "^4.17.4",
+    "string-width": "^2.0.0"
   }
 }
