--- a/package.json
+++ b/package.json
@@ -17,13 +17,23 @@
     "prebuild": "npm run lint",
     "build": "tsc",
     "watch": "tsc -w",
+    "clean": "rimraf dist",
+    "pretest": "npm run clean && npm run build",
+    "test": "nyc ava dist/**/*.spec.js",
     "prepublish": "npm run build",
-    "release": "standard-version"
+    "release": "standard-version",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "show-coverage": "opener ./coverage/index.html"
   },
   "devDependencies": {
     "@types/chalk": "^0.4.31",
     "@types/inquirer": "^0.0.34",
     "@types/lodash": "^4.14.65",
+    "ava": "^0.19.1",
+    "codecov": "^2.2.0",
+    "nyc": "^11.0.2",
+    "opener": "^1.4.3",
+    "rimraf": "^2.6.1",
     "standard-version": "^4.0.0",
     "tslint": "^5.2.0",
     "tslint-config-standard": "^5.0.2",
@@ -37,5 +47,24 @@
     "inquirer": "^3.0.6",
     "lodash": "^4.17.4",
     "string-width": "^2.0.0"
+  },
+  "nyc": {
+    "sourceMap": true,
+    "all": true,
+    "reporter": [
+      "text",
+      "html",
+      "json"
+    ],
+    "include": [
+      "src/**/*.ts",
+      "dist/**/*.js"
+    ],
+    "exclude": [
+      "src/**/*.spec.*",
+      "dist/**/*.spec.*",
+      "dist/**/*.d.ts",
+      "dist/**/*.map*"
+    ]
   }
 }
