test: add tests for history

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clean": "rimraf dist",
     "pretest": "npm run clean && npm run build",
     "test": "nyc ava dist/**/*.spec.js",
+    "watch-test": "ava dist/**/*.spec.js -w",
     "prepublish": "npm run build",
     "release": "standard-version",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
@@ -29,11 +30,13 @@
     "@types/chalk": "^0.4.31",
     "@types/inquirer": "^0.0.34",
     "@types/lodash": "^4.14.65",
+    "@types/sinon": "^2.3.0",
     "ava": "^0.19.1",
     "codecov": "^2.2.0",
     "nyc": "^11.0.2",
     "opener": "^1.4.3",
     "rimraf": "^2.6.1",
+    "sinon": "^2.3.2",
     "standard-version": "^4.0.0",
     "tslint": "^5.2.0",
     "tslint-config-standard": "^5.0.2",
