--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "lint": "tslint src/**/*.ts --fix --type-check --project=tsconfig.json",
     "prebuild": "npm run lint",
     "build": "tsc",
-    "watch": "tsc -w",
+    "watch": "concurrently -p \"[{name}]\" -n bld,tst -c dim,dim.gray  \"tsc -w\" \"ava dist/**/*.spec.js -w\"",
     "clean": "rimraf dist",
     "pretest": "npm run clean && npm run build",
     "test": "nyc ava dist/**/*.spec.js",
-    "watch-test": "ava dist/**/*.spec.js -w",
     "prepublish": "npm run build",
     "release": "standard-version",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
@@ -33,6 +32,7 @@
     "@types/sinon": "^2.3.0",
     "ava": "^0.19.1",
     "codecov": "^2.2.0",
+    "concurrently": "^3.4.0",
     "nyc": "^11.0.2",
     "opener": "^1.4.3",
     "rimraf": "^2.6.1",
